[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esedbrc"
version = "20251128"
description = "Extensible Storage Engine (ESE) database resources (esedbrc)"
maintainers = [
    { name = "Joachim Metz", email = "joachim.metz@gmail.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
    "artifacts >= 20220219",
    "cffi >= 1.9.1",
    "dfdatetime >= 20251018",
    "dfimagetools >= 20220129",
    "dfvfs >= 20251019",
    "dfwinreg >= 20240229",
    "dtfabric >= 20230518",
    "libbde-python >= 20220121",
    "libcaes-python >= 20240114",
    "libcreg-python >= 20200725",
    "libesedb-python >= 20150409",
    "libewf-python >= 20131210",
    "libfcrypto-python >= 20240114",
    "libfsapfs-python >= 20220709",
    "libfsext-python >= 20220829",
    "libfsfat-python >= 20220925",
    "libfshfs-python >= 20220831",
    "libfsntfs-python >= 20251018",
    "libfsxfs-python >= 20220829",
    "libfvde-python >= 20220121",
    "libfwnt-python >= 20210717",
    "libluksde-python >= 20220121",
    "libmodi-python >= 20210405",
    "libphdi-python >= 20220228",
    "libqcow-python >= 20201213",
    "libregf-python >= 20201002",
    "libsigscan-python >= 20230109",
    "libsmdev-python >= 20140529",
    "libsmraw-python >= 20140612",
    "libvhdi-python >= 20201014",
    "libvmdk-python >= 20140421",
    "libvsapm-python >= 20230506",
    "libvsgpt-python >= 20211115",
    "libvshadow-python >= 20160109",
    "libvslvm-python >= 20160109",
    "pytsk3 >= 20210419",
    "xattr >= 0.7.2 ; platform_system != \"Windows\"",
]

[project.scripts]
extract = "esedbrc.scripts.extract:Main"
list_databases = "esedbrc.scripts.list_databases:Main"

[project.urls]
Documentation = "https://esedbrc.readthedocs.io/en/latest"
Homepage = "https://github.com/libyal/esedb-kb"
Repository = "https://github.com/libyal/esedb-kb"

[tool.setuptools.package-data]
esedbrc = [
    "*.yaml",
    "data/*.yaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["esedbrc"]
exclude = ["docs", "tests", "tests.*", "utils"]
