[metadata]
name = esedbrc
version = 20251121
description = Extensible Storage Engine (ESE) database resources (esedbrc)
long_description = esedbrc is a Python module part of esedb-kb to allow reuse of Extensible Storage Engine (ESE) database resources.
long_description_content_type = text/plain
url = https://github.com/libyal/esedb-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  esedbrc = esedbrc
packages = find:
python_requires = >=3.10
scripts =
  scripts/extract.py
  scripts/list_databases.py

[options.package_data]
esedbrc =
  *.yaml
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .
